fixes alignment on cat 5

--- a/html/assets/stylesheets/index.scss
+++ b/html/assets/stylesheets/index.scss
@@ -214,18 +214,19 @@ body {
                     flex-basis: 60%;
                     padding-top: 2px;
                     margin-bottom: 2%;
-                    justify-content: space-evenly;
                     .__section__grid__item {
                         @include section-card;
                         flex-basis: 30.3%;
+                        margin-right: 3%;
                     }
                 }
                 .__section__grid__midi {
                     display: flex;
                     flex-flow: row nowrap;
-                    justify-content: space-evenly;
+                    justify-content: flex-start;
                     .__section__grid__item {
                         flex-basis: 23%;
+                        margin-right: 3.6%
                     }
                 }
             }
